@@ -61,6 +61,8 @@ Currently, the following people have "release access":
  - karltk@gentoo.org
  - genone@gentoo.org
  - port001@gentoo.org
+ - agriffis@gentoo.org
+ - fuzzyray@gentoo.org
 
 If you want a new release, ping either of us. If you want to get 
-"release access", talk to karltk@gentoo.org
+"release access", talk to fuzzyray@gentoo.org
